styles.css
@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@300;400;500;600;700&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Crimson Pro', serif;
    display: flexbox;
}

.text-left {
    text-align: left;
    color:white;
}

.text-right {
    text-align: right;
    color:white;
}

.ahscsico:hover {
    transform: scale(1.1);
}

.ahscsico {
    transition: transform .2s;
    height: 3rem;
    margin: 0 auto;
}

.white-text {
    color:white;
}

.nav-item {
    font-size: 1.5rem;
    font-weight: 600;
    padding: 0.3em;
}

.bottom {
    background-color: #2F2E2E;
    height: max-content;
}

.container-fluid{
    padding: 0;
    overflow:auto;
}
.aboutus {
    background-color: #F8F8FF;
    text-align: center;
}

.programs div {
    border-radius: 25px;
    padding: 20px;
    height: 400px;
    background-color: white;
    text-align: center;
    margin: auto;
    display: flex;
    align-content: center;
    justify-content: center;
    align-self: center;
}

.card {
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    height: 100%;
}

.card-title {
    font-size: 1.6rem;
    
}

.card-text {
    
}

.carousel {
    width:640px;
    height:360px;
}
.underlined-text {
    text-decoration: underline;
}

.ourmissiontxt {
    background-color: white;
    text-align: left;
    width:50%;
    float:left;
}

.ourmission {
    width:50%;
    float:right;
    text-align:right;
}

.aesthetic {
    background: linear-gradient(to bottom right,transparent 0%,transparent 50%,#ACBEFF 50%,#ACBEFF 100%);
    height: 100px;
}

.benefits {
    height: 500px;
    background-color:#ACBEFF;
    text-align: right;
    background-repeat: no-repeat;
}

.navbar {
    background-color: white;
    padding:.5rem 1rem!important;
    box-shadow: 0 0.5rem 0.5rem rgb(0 0 0 / 10%);
    z-index: 1;
}

.navbar-nav {
    margin-left:auto!important;
}

.btn {
    background-color: #051E3D; 
    color: white;
}


.banner {
    background-image: url("/images/codeheader.PNG");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-color: #1e1e1e;
    display:flex; 
    align-items:center;
    height:300px;
    color:white;
}

@media screen and (max-width: 992px) {
    .col {
        flex:none;
    }
    .ourmissiontxt {
        width:100%;
    }
    .ourmission {
        text-align: center;
        width:100%;
    }
    .ourmission img {
        height: 250px;
    }
    .calendar iframe{
        margin-left:0;
        margin-right:0;
    }
    .banner {
        background-image: url("/images/codeheadercrop.PNG");
    }
}



.events {
    text-align:center;
}

.btn-normal {
    background-color: #051E3D; 
    color: white;
}

.btn-normal:hover {
    color:lightgray;
}

